0023745: Draw Harness, ViewerText - vdrawtext command should not modify global text aspect

Test case for issue CR23745